cabal-version: 3.0
name: example-handlers
version: 1.0.0
author: Nicolas Hery

common options
    build-depends:
        , base ^>= 4.15.1.0
    default-extensions:
        BangPatterns
        BinaryLiterals
        ConstrainedClassMethods
        ConstraintKinds
        DataKinds
        DefaultSignatures
        DeriveDataTypeable
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveLift
        DeriveTraversable
        DoAndIfThenElse
        EmptyCase
        EmptyDataDecls
        EmptyDataDeriving
        ExistentialQuantification
        ExplicitForAll
        FlexibleContexts
        FlexibleInstances
        ForeignFunctionInterface
        FunctionalDependencies
        GADTSyntax
        GADTs
        GeneralisedNewtypeDeriving
        GeneralizedNewtypeDeriving
        HexFloatLiterals
        ImplicitPrelude
        ImportQualifiedPost
        InstanceSigs
        KindSignatures
        LambdaCase
        MonomorphismRestriction
        MultiParamTypeClasses
        MultiWayIf
        NamedFieldPuns
        NamedWildCards
        NumericUnderscores
        OverloadedStrings
        PatternGuards
        PolyKinds
        PostfixOperators
        RankNTypes
        RelaxedPolyRec
        ScopedTypeVariables
        StandaloneDeriving
        StandaloneKindSignatures
        StarIsType
        TraditionalRecordSyntax
        TupleSections
        TypeApplications
        TypeFamilies
        TypeOperators
        TypeSynonymInstances
    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-uni-patterns
        -Wincomplete-record-updates
        -Wredundant-constraints
        -Wmissing-export-lists
        -Wpartial-fields
        -Wunused-packages
    default-language: Haskell2010

library
    import: options
    exposed-modules:
        App.Config
        App.Scotty
        App.Yesod
    build-depends:
        , mtl ^>= 2.2
        , scotty ^>= 0.12
        , text ^>= 1.2
        , warp ^>= 3.3
        , yesod-core ^>= 1.6
    hs-source-dirs: src

executable example-handlers
    import: options
    main-is:          Main.hs
    build-depends:
        example-handlers
    hs-source-dirs:   app
