cabal-version: 3.0
name: example-handlers
version: 1.0.0
author: Nicolas Hery

common options
    build-depends:
        , base ^>= 4.15.1.0
    default-extensions:
        BangPatterns
        BinaryLiterals
        ConstrainedClassMethods
        ConstraintKinds
        DataKinds
        DefaultSignatures
        DeriveDataTypeable
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveLift
        DeriveTraversable
        DoAndIfThenElse
        EmptyCase
        EmptyDataDecls
        EmptyDataDeriving
        ExistentialQuantification
        ExplicitForAll
        FlexibleContexts
        FlexibleInstances
        ForeignFunctionInterface
        FunctionalDependencies
        GADTSyntax
        GADTs
        GeneralisedNewtypeDeriving
        HexFloatLiterals
        ImplicitPrelude
        ImportQualifiedPost
        InstanceSigs
        KindSignatures
        LambdaCase
        MonomorphismRestriction
        MultiParamTypeClasses
        MultiWayIf
        NamedFieldPuns
        NamedWildCards
        NumericUnderscores
        OverloadedStrings
        PatternGuards
        PolyKinds
        PostfixOperators
        RankNTypes
        RelaxedPolyRec
        ScopedTypeVariables
        StandaloneDeriving
        StandaloneKindSignatures
        StarIsType
        TraditionalRecordSyntax
        TupleSections
        TypeApplications
        TypeFamilies
        TypeOperators
        TypeSynonymInstances
    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-uni-patterns
        -Wincomplete-record-updates
        -Wredundant-constraints
        -Wmissing-export-lists
        -Wpartial-fields
        -Wunused-packages
    default-language: Haskell2010

library
    import: options
    exposed-modules:
        App.Cart
        App.Config
        App.External
        App.Req
        App.Scotty
        App.Servant
        App.Text
        App.Yesod
    build-depends:
        , aeson ^>= 2.1
        , Blammo ^>= 1.0
        , bytestring ^>= 0.10
        , http-client ^>= 0.7
        , http-types ^>= 0.12
        , microlens ^>= 0.4
        , modern-uri ^>= 0.3
        , mtl ^>= 2.2
        , req ^>= 3.13
        , scotty ^>= 0.12
        , servant-server ^>= 0.19
        , string-conversions ^>= 0.4
        , text ^>= 1.2
        , unliftio ^>= 0.2
        , warp ^>= 3.3
        , yesod-core ^>= 1.6
    hs-source-dirs: src

executable example-scotty
    import: options
    main-is: MainScotty.hs
    build-depends:
        example-handlers
    hs-source-dirs: app

executable example-yesod
    import: options
    main-is: MainYesod.hs
    build-depends:
        example-handlers
    hs-source-dirs: app

executable example-servant
    import: options
    main-is: MainServant.hs
    build-depends:
        example-handlers
    hs-source-dirs: app

executable example-external
    import: options
    main-is: MainExternal.hs
    build-depends:
        example-handlers
    hs-source-dirs: app
